; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/omap2/omapfb/dss/extr_overlay-sysfs.c_overlay_output_size_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/omap2/omapfb/dss/extr_overlay-sysfs.c_overlay_output_size_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap_overlay = type { i32 (%struct.omap_overlay*, %struct.omap_overlay_info*)* }
%struct.omap_overlay_info = type { i32, i32 }

@PAGE_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"%d,%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.omap_overlay*, i8*)* @overlay_output_size_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @overlay_output_size_show(%struct.omap_overlay* %0, i8* %1) #0 {
  %3 = alloca %struct.omap_overlay*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.omap_overlay_info, align 4
  store %struct.omap_overlay* %0, %struct.omap_overlay** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.omap_overlay*, %struct.omap_overlay** %3, align 8
  %7 = getelementptr inbounds %struct.omap_overlay, %struct.omap_overlay* %6, i32 0, i32 0
  %8 = load i32 (%struct.omap_overlay*, %struct.omap_overlay_info*)*, i32 (%struct.omap_overlay*, %struct.omap_overlay_info*)** %7, align 8
  %9 = load %struct.omap_overlay*, %struct.omap_overlay** %3, align 8
  %10 = call i32 %8(%struct.omap_overlay* %9, %struct.omap_overlay_info* %5)
  %11 = load i8*, i8** %4, align 8
  %12 = load i32, i32* @PAGE_SIZE, align 4
  %13 = getelementptr inbounds %struct.omap_overlay_info, %struct.omap_overlay_info* %5, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds %struct.omap_overlay_info, %struct.omap_overlay_info* %5, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @snprintf(i8* %11, i32 %12, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %16)
  ret i32 %17
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
